--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prisma": {
-      "seed": "ts-node ./scripts/index.ts"
-    }
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.3",
