--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-loading-skeleton": "^3.4.0",
     "react-query": "^3.39.3",
     "react-spinners": "^0.13.8",
+    "recharts": "^2.15.1",
     "replicate": "^0.18.1",
     "server-only": "^0.0.1",
     "tailwind-merge": "^2.2.1",
